test/lattests/bad/declInFor.lat
int[] foo() { return new int[]; }

int main() {
    for (int a : foo()) int x = 42;

    printInt(x);

    return 0;
}